
- rename function drive_no_dvd() to rive_no_disc():
- change string id 33051
- create shell script to read chapters from blueray [blueray-chapters.sh] 
- create shell script to transcode a chapter from bluray [bluereay-transcode.sh]
- Made the scripts puplic for testing. I hope I have some feedback    

23/06/10        We     

- Create progress-counter for transcoding blueray-mkv inside shell-script.
- Test the progress-bar for transcoding inside shell. works :-)            

*******************************************************                       
* The King is dead, long live the king !
* Le roi est mort,vive Roi !
* Der König ist tot, lang lebe der König !
* rex mortuus est, vivat rex !
*******************************************************   
                                      
27/06/10        We     

- Innitial Setup for a XBMX-Addon.
- Created Addon.xml and a valid Addon-ID 
- Own configurations-settings are replaced with native xbmc-settings.
- Starting from a scratch with the python code (gui-part / os-part)
- created folders linux / windows / mac
- Starting from a scratch with string.xml (english) 
- MainMenu and Advanced-Menu created

27/06/10        We     

- Testing installation of Handbrake / Makekmv 32-Bit
- Created tar.bz2 archives for linux
 
1787142 2010-06-15 18:21  HandBrake-0.9.4.tar.bz2
3661919 2010-06-28 23:16  makemkv_v1.5.6_beta_bin.tar.bz2
1598293 2010-06-28 23:18  makemkv_v1.5.6_beta_oss.tar.bz2

- Changed all output from shell-scripts to the default addon-directory   
- Intergrate this Changelog.txt inside the root-directory of the addon  
- Added 32/64 deb-packet for linux

29/06/10        We

- Activate svn at google.code 
  Anomyous read-only cvs access with the following command is possible 
  svn checkout http://swiss-army-knife.googlecode.com/svn/trunk/ swiss-army-knife-read-only
 
- Added linux-shell/setup.sh 
  This file needs to executed with uid 0 

30/06/10	We

- Added md5 checksumms for the debian installer files 